Update CONTRIBUTING.md to reflect current state
- Expand repository layout with examples/, scripts/, and binding internals
- Add "Running examples" section with run-example.sh usage
- Add step 5 to new binding guide: unique [lib] name to avoid target/release collisions
- Update Go dependency notes: pkg-config approach, .pc file workflow
- Update Java notes: libcross_logger_jni rename, --enable-native-access flag
- Update Node.js notes: ESM/CJS interop via index.mjs

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>